--- a/.github/workflows/deploy-env.yaml
+++ b/.github/workflows/deploy-env.yaml
@@ -1,6 +1,12 @@
 name: Deploy - Environment
 
 on:
+  pull_request:
+    types: [ closed ]
+    branches:
+      - main
+  release:
+    types: [ published ]
   workflow_dispatch:
     inputs:
       environment:
@@ -20,18 +26,40 @@ on:
         options:
           - 'True'
           - 'False'
-            
-run-name: Deploy to ${{ github.event.inputs.environment }}
+
+run-name: Deploy to ${{ (github.event_name == 'release' && 'Production') || (github.event.pull_request.merged && 'Test') || github.event.inputs.environment }}
+
 jobs:
+  tag_release:
+    if: github.event.pull_request.merged == true
+    name: Create New Tag
+    runs-on: ubuntu-latest
+    outputs:
+      new_tag: ${{ steps.tag_version.outputs.new_tag }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Bump version and push tag
+        id: tag_version
+        uses: mathieudutour/github-tag-action@v6.1
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          release_branches: main
+
   package:
     name: 'Package Web in Docker'
     runs-on: ubuntu-latest
+    needs: [ tag_release ]
+    if: always() && (needs.tag_release.result == 'success' || github.event_name != 'pull_request')
     defaults:
       run:
         working-directory: ./src
     permissions:
       contents: read
       packages: write
+    outputs:
+      image_tag: ${{ steps.set_tag.outputs.tag }}
 
     steps:
       - uses: actions/checkout@v4
@@ -39,9 +67,23 @@ jobs:
       - name: Lowercase the repo name and username
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
+      - name: Set Docker image tag
+        id: set_tag
+        run: |
+          if [[ "${{ github.event_name }}" == "release" ]]; then
+            echo "Using release tag for versioning: ${{ github.ref_name }}"
+            echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.event.pull_request.merged }}" == "true" ]]; then
+            echo "Using new auto-generated tag for versioning: ${{ needs.tag_release.outputs.new_tag }}"
+            echo "tag=${{ needs.tag_release.outputs.new_tag }}" >> $GITHUB_OUTPUT
+          else
+            echo "Using commit SHA for versioning for manual run"
+            echo "tag=${{ github.sha }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Build Web Docker Image
         run: |
-          docker build . -t ghcr.io/${{ env.REPO }}:${{ github.sha }} -f web/CareLeavers.Web/Dockerfile
+          docker build . -t ghcr.io/${{ env.REPO }}:${{ steps.set_tag.outputs.tag }} -f web/CareLeavers.Web/Dockerfile
 
       - uses: docker/login-action@v3
         with:
@@ -50,17 +92,18 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Push Web Docker Image
-        run: docker push ghcr.io/${{ env.REPO }}:${{ github.sha }}
+        run: docker push ghcr.io/${{ env.REPO }}:${{ steps.set_tag.outputs.tag }}
 
   deploy_environment:
-    name: Deploying site to ${{ github.event.inputs.environment }}
+    name: Deploying site to ${{ (github.event_name == 'release' && 'Production') || (github.event.pull_request.merged && 'Test') || github.event.inputs.environment }}
     runs-on: ubuntu-latest
-    needs: [package]
+    needs: [ package ]
+    if: github.event.pull_request.merged == true || github.event_name != 'pull_request'
     permissions:
       contents: read
       id-token: write
     environment:
-      name: ${{ github.event.inputs.environment }}
+      name: ${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'pull_request' && 'Test') || github.event.inputs.environment }}
     env:
       ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
       ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
@@ -68,6 +111,26 @@ jobs:
       ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
 
     steps:
+      - name: Set dynamic variables
+        id: vars
+        run: |
+          ENV_NAME="${{ (github.event_name == 'release' && 'Production') || (github.event_name == 'pull_request' && 'Test') || github.event.inputs.environment }}"
+          echo "ENV_NAME=$ENV_NAME" >> $GITHUB_ENV
+          echo "Deployment Environment: $ENV_NAME"
+
+          if [[ "${{ github.event_name }}" == "release" ]]; then
+            BODY="${{ github.event.release.body }}"
+            CACHE_VALUE=$(echo "$BODY" | grep 'clear-cache:' | awk -F': ' '{print $2}' | tr -d '[:space:]')
+            echo "clear_cache=${CACHE_VALUE:-False}" >> $GITHUB_OUTPUT
+            echo "Clear Cache: ${CACHE_VALUE:-False}"
+          elif [[ "${{ github.event.pull_request.merged }}" == "true" ]]; then
+            echo "clear_cache=False" >> $GITHUB_OUTPUT
+            echo "Clear Cache: False"
+          else
+            echo "clear_cache=${{ github.event.inputs.clear-cache }}" >> $GITHUB_OUTPUT
+            echo "Clear Cache: ${{ github.event.inputs.clear-cache }}"
+          fi
+
       - uses: actions/checkout@v4
       - uses: hashicorp/setup-terraform@v3
         with:
@@ -91,9 +154,7 @@ jobs:
           azcliversion: latest
           inlineScript: |
             az group create --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --output none --tags "Environment=${{ vars.CIP_ENVIRONMENT }}" "Product=Design Operations" "Service=Newly onboarded" "Service offering=Design operations"
-
             az storage account create --name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-tfstate --location westeurope --sku Standard_LRS
-
             az storage container create --name tfstate --account-name s186${{ vars.ENVIRONMENT_PREFIX }}cltfstate
 
       - name: 'Terraform Init'
@@ -106,6 +167,7 @@ jobs:
         working-directory: ./src/infrastructure/terraform
         run: terraform plan -out plan.plan
         env:
+          TF_VAR_aspnetcore_environment: ${{ env.ENV_NAME }}
           TF_VAR_environment_prefix: ${{ vars.ENVIRONMENT_PREFIX }}
           TF_VAR_cip_environment: ${{ vars.CIP_ENVIRONMENT }}
           TF_VAR_contentful_delivery_api_key: ${{ secrets.CONTENTFUL_DELIVERY_API_KEY }}
@@ -119,13 +181,11 @@ jobs:
           TF_VAR_custom_domain: ${{ vars.CUSTOM_DOMAIN }}
           TF_VAR_azure_translation_document_endpoint: ${{ vars.AZURE_TRANSLATION_DOCUMENT_ENDPOINT }}
           TF_VAR_azure_translation_access_key: ${{ secrets.AZURE_TRANSLATION_ACCESS_KEY }}
-          TF_VAR_aspnetcore_environment: ${{ github.event.inputs.environment }}
           TF_VAR_azure_frontdoor_scale: ${{ vars.AZURE_FRONTDOOR_SCALE }}
           TF_VAR_pdf_generation_api_key: ${{ secrets.PDF_GENERATION_API_KEY }}
           TF_VAR_pdf_generation_use_sandbox: ${{ vars.PDF_GENERATION_USE_SANDBOX }}
           TF_VAR_rebrand: ${{ vars.REBRAND }}
           TF_VAR_support_alert_email: ${{ secrets.SUPPORT_ALERT_EMAIL }}
-        
 
       - name: 'Terraform Apply'
         id: terraform_apply
@@ -141,7 +201,7 @@ jobs:
         with:
           app-name: s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service
           slot-name: 'staging'
-          images: 'ghcr.io/${{ env.REPO }}:${{ github.sha }}'
+          images: 'ghcr.io/${{ env.REPO }}:${{ needs.package.outputs.image_tag }}'
 
       - name: Swap slot to production
         run: az webapp deployment slot swap --name s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-app-service --resource-group s186${{ vars.ENVIRONMENT_PREFIX }}-cl-web-rg --slot staging --target-slot production
@@ -152,8 +212,7 @@ jobs:
       - name: Clear Cache
         id: clear-cache
         uses: fjogeleit/http-request-action@v1
-        if: ${{ inputs.clear-cache == 'True' }}
-        with: 
+        if: ${{ steps.vars.outputs.clear_cache == 'True' }}
+        with:
           url: 'https://${{ vars.CUSTOM_DOMAIN }}/b0e0dce2-b96d-4b94-a800-63c3ab56e72f'
           method: 'POST'
-        
